css/app.css
body, html {
  height: 100%;
  min-height: 100%;
}

body {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

#map {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.1);
}

.box {
  position: absolute;
  top: 20px;
  right: 20px;
  left: 20px;
  z-index: 1;
}
.box-icon {
  margin-right: 10px;
}
.box-inner {
  background: #FFFFFF;
  box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.15);
  padding: 32px;
  max-height: 100%;
  overflow: auto;
}
.box-header {
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: top;
  align-items: top;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.box-selectTitle {
  font: 600 13px 'Open Sans';
  margin-bottom: 3px;
  text-transform: uppercase;
}

.box-container.is-hidden {
  display: none;
}
.box-selectInfo {
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: baseline;
  align-items: baseline;
}
.box-figure {
  color: #2E3C43;
  font: 400 16px/18px 'Open Sans';
  margin-right: 12px;
  margin: 8px;
}
.box-figureCode {
  overflow: scroll;
  font-family: Courier;
  font-size: 8px;
  font-weight: bold;
  background: black;
  color: lightgreen;
  padding: 3px;
  border: 3px solid black;
  border-radius: 5px;
  width: 200px;
  height: 50px;
}

.box-figureInfo {
  font: 400 16px/24px 'Open Sans';
  color: #979EA1;
}


.box-nav {
  margin-top: 45px;
  margin-bottom: 21px;
}
.box-navNavigation {
  display: -webkit-flex;
  display: flex;
}
.box-navNavigation li {
  margin-right: 16px;
  font: 600 13px/20px 'Open Sans';
}
.box-navNavigation li a {
  color: #636D72;
  text-decoration: none;
  text-transform: uppercase;
}
.box-navNavigation li a.is-selected {
  color: #3AA9E3;
}
.box-result {
  margin: 0 -16px;
}
.box-resultList {
  font: 400 16px/32px 'Open Sans';
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: baseline;
  align-items: baseline;
  flex-wrap: wrap;
  overflow: auto;
}
.box-resultList
 li {
  width: calc(50% - 32px);
  margin: 0 16px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  color: #AAAAAA;
}
.box-resultList a {
  color: #AAAAAA;
  text-decoration: none;
}
.box-resultList li a.is-selected {
  color: #3AA9E3;
}


.box-input {
  display: block;
  border-bottom: 2px solid #3AA9E3;
  padding-bottom: 4px;
  font: 400 24px/36px 'Open Sans';
  color: #3AA9E3;
  cursor: pointer;
  position: relative;
}
.box-input:after {
  content:"";
  display: block;
  position: absolute;
  width: 13px;
  height: 12px;
  background: url(../img/arrow.svg) no-repeat;
  right: 0;
  bottom: 12px;
}
.box-input.is-open:after {
  transform: rotate(180deg);
}

div.cartodb-zoom {
  position: absolute !important;
  bottom: 60px;
}

div.cartodb-searchbox {
  position: absolute !important;
  bottom: 60px;
  margin: 60px 0px 0px 60px !important;
}

canvas#cover{
  width: 100%;
  height: 100%;
  position: absolute;
  pointer-events: none;
}

.quintile {
  height: 40px;
  width: 40px;
}

.colors {
  text-align: right;
  display: inline-block;
}

.has-error {
  color: #a94442;
  font-style: italic !important;
}

